# svg-preview

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
SVGThumbnailExtension/: ClassFactory.cpp  ClassFactory.h  Common.h  Logging.h  Main.cpp  Registry.cpp  Registry.h  ThumbnailProvider.cpp  ThumbnailProvider.def  ThumbnailProvider.h  VersionInfo.rc.in
deployment/: Build.ps1  SIGNING.md  SVGThumbnailExtension.iss  SvgPreview.iss  appveyor.yml  build.cmd
test/harness/: main.cpp
